--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -1,8 +1,8 @@
 \chapter{Methods}
 \label{sec:Methods}
 Although the particle filter  is a standard Regularized
-Particle filter, as described in \cite{Arulampalam2002a}, optimizing the 
-particle filter for use with FMRI data is non-trivial. 
+Particle filter, as described by Arulampalam et al., optimizing the 
+particle filter for use with FMRI data is non-trivial \cite{Arulampalam2002a}. 
 
 
 \section{Model}
@@ -20,8 +20,8 @@ The reason for the difference is that cloud of particles is, to some extent,
 able to account for that noise. It is common, however, to model that noise
 in particle filters by adding a random value to each updated state variable. 
 Because the purpose of this particle filter is to learn the underlying distribution
-of the static parameters, rather than precisely model the time course of the 
-in the dynamic parameters ($\{s,f,v,q\}$) this noise is left out. It also helps
+of the static parameters, rather than precisely modeling the time course of the 
+in the dynamic state variables $\{s,f,v,q\}$ this noise is left out. It also helps
 that detrending is applied before the particle filter and that the
 BOLD model is dissipative. When no stimuli are applied, all the particles 
 decay to ($\{0,1,1,1\}$). Typical particle filters 
@@ -30,7 +30,7 @@ less necessary when good priors are available.
 
 For all the analyses  in this work, $1400$ integration points
 per second were used.  Typically a step size of $0.001$ was sufficient,
-however, from time to time $0.001$ can still be too high for the
+however, from time to time $0.001$ can still result in problems for the
 BOLD model.
 
 \section{Preprocessing}
@@ -38,7 +38,7 @@ BOLD model.
 The normal pipeline for analyzing
 FMRI involves a several preprocessing steps. The first and most important
 task is motion correction. To do this, a single volume in time is chosen, and
-volumes at every other time are registered to this one volume. This corrects
+volumes at every other time are realigned to best match the target volume. This corrects
 for motion by the patient as well as small changes in the magnetic
 fields that cause the image to shift. 
 In conventional statistical parametric mapping, a Gaussian smoothing
@@ -64,12 +64,12 @@ density of capillaries, and slight differences in activation across
 a particular voxel can all lead to signal attenuation and noise. 
 
 A particularly difficult form of noise present in FMRI is a low frequency
-drift, often characterized as a Wiener process (\cite{Riera2004}). 
+drift, often characterized as a Wiener process \cite{Riera2004}. 
 Though not present in all regions, as many as ten to fifteen percent
-of voxels can be affected (\cite{Tanabe2002}), thus it is prevalent enough to cause significant
+of voxels can be affected \cite{Tanabe2002}, thus it is prevalent enough to cause significant
 inference problems \cite{Smith2007}. It is still not
 clear what exactly causes this noise, although one possibility is 
-the temperature difference in scanner magnetic coils\cite{Smith2007}. 
+the temperature difference in scanner magnetic coils \cite{Smith2007}. 
 It is clear that this drift signal is not solely
 due to a physiological effects, given its presence in cadavers and phantoms 
 \cite{Smith1999}. Interestingly, it is usually spatially correlated, and
@@ -112,7 +112,7 @@ The resting state was gathered in the exact same way as the data in
 \subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_34_43_24}}
 \subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_22_38_23}}
 \subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_37_29_24}}
-\caption{Q-Q Plots of resting state data, using the BOLD signal changes}
+\caption{Q-Q Plots of resting state data, using the BOLD signal steps.}
 \label{fig:QQDelta}
 \end{figure}
 
@@ -128,8 +128,8 @@ The resting state was gathered in the exact same way as the data in
 \end{figure}
 
 Because most methods (including the one used in this paper)
-assume the noise realizations are independent of each other, the auto-
-correlation is of particular interest (which is a necessary but not
+assume the noise realizations are independent of each other, the autocorrelation 
+is of particular interest (which is a necessary but not
 sufficient condition for independence). Gaussianity is also a common
 assumption made in studies of FMRI data, though that assumption is not
 needed in this work. Regardless, comparing the distribution to a Gaussian
@@ -140,24 +140,23 @@ characterized by steps that are Gaussian and independent. The simulations discus
 \autoref{sec:Single Voxel Simulation} make use of this, 
 by adding a Wiener random process to the overall signal. To determine
 whether the noise is in fact Wiener, the distribution of 
-the steps were plotted against a Gaussian. 
+the steps were also plotted against a Gaussian. 
 
 Finally, removal of the drift is often performed with a high pass filter,
-so analyzed the distribution after subtracting of a spline, (see \autoref{sec:Methods Preprocessing}).
+so I also analyzed the distribution after subtracting a spline, (see \autoref{sec:Methods Preprocessing}).
 
 \autoref{fig:QQDC} shows the 
 results with a regression line fit to the points.
 Recall that in a Quartile-Quartile (Q-Q) plot, if the points plotted on the 
-x-axis and the points
-on the y-axis come from the same type of distribution, then all the points will
+x and y axes come from the same type of distribution, then all the points will
 be collinear. Differences in the variance will cause the line to have a slope
 other than 1, while differences in the expected value will cause the fitted line
 to be shifted. In these Q-Q plots, the points are being compared to the standard
-Gaussian distribution. Note that in \autoref{fig:QQDC} the points have all been 
+Gaussian distribution. Note that the points have all been 
 normalized (changed to percent difference).
 
-Note that \autoref{fig:QQDC:A} and \autoref{fig:QQDC:B}
-are well described by a Gaussian process with a small autocorrelation, 
+\autoref{fig:QQDC:A} and \autoref{fig:QQDC:B}
+are well described by a Gaussian process with a small autocorrelation, but 
 \autoref{fig:QQDC:C} and \autoref{fig:QQDC:D} are not. In particular the tails of \autoref{fig:QQDC:C}
 do not seem to fit the Gaussian well. Also note the significant autocorrelation in
 \autoref{fig:QQDC:C} and \autoref{fig:QQDC:D}. As expected, the noise is not strictly
@@ -166,7 +165,7 @@ closely to the normal distribution.
 As expected, most of the autocorrelation disappears for the step data. Given
 that the steps seem to fit the Normal distribution, the low autocorrelation
 indicates that the steps could be Independently Distributed. 
-Therefore, the noise does seem to come close to a Wiener process. 
+Therefore, the noise is consistent with a Wiener process. 
 
 De-trending the time-series by subtracting a spline fit to the distribution
 removed much of the autocorrelation present in \autoref{fig:QQDC:C} and \autoref{fig:QQDC:D},
@@ -179,25 +178,27 @@ In all, the de-trending is effectively removing Wiener noise.
 The non-stationary
 aspect of a Weiner process, presumably the result of integrating some
 $\nu_x$ is difficult to compensate for, and so many methods
-have been developed to compensate for it. \cite{Tanabe2002} and \cite{Smith1999} have
+have been developed to compensate for it. Tanabe et al. and Smith et al. 
 demonstrated that this component is prevalent, and may in fact be an inherent  characteristic
-of FMRI. It has been reported that in some studies as many as half the voxels 
-benefited from detrending (\cite{Smith2007}). In a head to head comparison, 
-\cite{Tanabe2002}, showed that in most cases subtracting off
-a spline worked the best. The benefit of the spline versus wavelets, high pass 
+of FMRI \cite{Tanabe2002, Smith1999}. It has been reported that in some studies as 
+many as half the voxels 
+benefited from detrending \cite{Smith2007}. In a head to head comparison, 
+Tanabe et al.  showed that in most cases subtracting off
+a spline worked the best \cite{Tanabe2002}. 
+The benefit of the spline versus wavelets, high pass 
 filtering or other DC removal techniques is that the frequency response is not set.
 Rather, the spline is adaptive to the input. Unfortunately no method will 
 perfectly remove noise, and no method will leave the signal untouched.
 
 The method I used to calculate the spline was picking one knot for every 20
 measurements in an image. Thus a 10 minute session at a repetition time of 
-2.1 seconds would have 19 knots. The knot first and last knots were each 
+2.1 seconds would have 19 knots. The first and last knots were each 
 given half the number of samples as the rest of the knots; which were all 
 located at the center of their sample group. The median of each sample group
 was then taken and used as the magnitude for the group. Taking the median 
 versus the mean seemed to work better, given the presence of outliers. 
 There is potential to optimize the spline further using a canonical 
-HRF to find resting points; however, for this to work the experiment would have
+HRF to find resting points; however, the experiment would have
 to be designed with this in mind. 
 
 Problematically, after removing the DC component of the signal,
@@ -206,10 +207,10 @@ Unfortunately this is not the natural state of the BOLD signal. More specificall
 when the signal is inactive, the BOLD response should be at 0\% change from
 the base level; activation may then increase, or for short periods decrease from this base.
 Because most of the BOLD signal is above baseline, after removing the spline
-the BOLD resting state will be below 0\%.  This reduces the ability of an algorithm to learn.
+the resting state will be below 0\%.  
 One method of accounting for this is to simply add a DC gain model parameter.
-Like all the other model parameters, with enough measurements, a viable
-parameter would fall. Yet adding another dimension increases the
+Like all the other model parameters, with enough measurements, the particle filter
+would be able to settle on a good estimate. Yet adding another dimension increases the
 complexity of the model, when the parameter is relatively easy to estimate
 by visual inspection.  In this work a simpler approach was used. To determine
 the DC gain I used a robust estimator of scale. The Median Absolute Deviation (MAD)
@@ -220,14 +221,15 @@ methods may work better, however the MAD worked well,
 as \autoref{fig:PreprocessedLowNoise} and \autoref{fig:PreprocessedHighNoise} show. 
 
 \begin{equation}
-y_{\text{gain}, 0:K} = 1.4826\text{median}_{i=0:K}(y_i - \text{median}(y_{0:K}))
+y_{\text{gain}, 0:K} = 1.4826\underset{i=0:K}{\text{median}}(y_i - \text{median}(y_{0:K}))
 \label{eq:mad}
 \end{equation}
 
-A serious concern when adding and subtracting arbitrary values to 
+A serious concern when adding constant values to 
 real data is whether this will create false positives. This is a legitimate
 concern; however, a boosted response does not effect how well the BOLD model 
-predicts the actual measurements. 
+predicts the actual measurements; and as mentioned before, the DC signal of FMRI
+is never used. 
 
 %\subsection{Linearizing Noise}
 %\label{sec:Methods Delta Based Inference}
@@ -268,8 +270,8 @@ predicts the actual measurements.
 %\end{figure}
 
 \section{Particle Filter Settings}
-There are quite a few options when using a particle filter; those
-options will be discussed in this section.
+There are quite a few options when using a particle filter; therefore this
+section will discuss the design choices made in this work.
 
 \subsection{Prior Distribution}
 \label{sec:PriorDist}
@@ -277,68 +279,47 @@ For the BOLD model described in \autoref{sec:BOLD Physiology}, several
 different studies have endeavored to calculate parameters. The results
 of these studies may be found in \autoref{tab:Params}, and the methods 
 used for each may be found in \autoref{sec:Prior Works}. Unfortunately,
-\cite{Friston2000} only studied regions deemed active by the General 
+Friston et al. only studied regions deemed active by the General 
 Linear Model; and most other research (including \cite{Friston2001}) used these results as 
-the source for their priors. 
-The one exception is \cite{Johnston2008}, which came to a extremely different
-distributions. For a particle filter, the choice of a prior is
-the single most important design choice. A very wide prior will require
+the source for their priors \cite{Friston2000}. 
+The one exception is to this is Johnston et al. which came to a extremely different
+distributions \cite{Johnston2008}. For a particle filter, the choice of a prior is
+the single most important design decision. A very wide prior will require
 more particles to be sufficiently dense, a very thin (low variance) prior may miss
 the true parameters. Consequently, for this work it was natural
-to use priors that will give results consistent with previous works, 
+to use priors that would give results consistent with previous works
 \cite{Friston2000}. This constrains the usefulness of the model to
-areas that fall within the prior distribution, yet will allow results
+areas that fall within the prior distribution, yet allowed results
 to be comparable to other works. There is a significant need for better
 estimates of the physiological parameters; and, while physical experiments
 may not be possible, it would not be unreasonable to do a study with
 exhaustive simulated annealing or hill climbing tests for multiple
-regions and multiple patients.
-
-There is an interesting anomaly with the priors found in virtually all
-the works that characterized the parameters, except \cite{Johnston2008}.
-The BOLD signal is universally recognized to be around $2-3\%$, maybe
-reaching $5\%$ in extreme activation. Yet using the mean priors
-from \cite{Friston2000}, the signal response for a $0.1$ second
-impulse only reaches half a percent, as \autoref{fig:MeanResponseF}
-shows.
+regions and multiple patients. That said, a significant amount of
+indeterminability exists in the parameters, which is discussed in 
+\autoref{sec:Single Voxel Simulation}
 
 \begin{figure}
 \centering
-\includegraphics[trim=6cm 3cm 6cm 3cm,width=16cm]{images/mean_response}
+\includegraphics[trim=6cm 2cm 6cm 2cm,width=15cm]{images/mean_response}
 \caption{Response to $0.1s$ impulses with the mean parameters from \cite{Friston2000}}
 \label{fig:MeanResponseF}
 \end{figure}
 
-While this could be the result of a stimulus
-being too short to lead to strong activation, a similar stimulus
-scheme in real data showed a much larger response than 
-half a percent as well. In fact, after applying de-trending,
-converting the image to percent-difference, and removing 
-outliers ($ BOLD > 10\% \text{ or } BOLD < -10\%$) the total variance
-across all \emph{active} voxels was still around .02, indicating
-that in active voxels a signal peaking below .005 seems unlikely. 
-Of course, if more restriction were placed on the outliers, its possible
-this standard deviations could be brought down. 
-The parameter estimates by \cite{Johnston2008} are even more 
-confusing, with peaks of well below $.1\%$ (\autoref{fig:MeanResponseJ}).
-
 \begin{figure}
 \centering
-\includegraphics[trim=6cm 3cm 6cm 3cm,width=16cm]{images/mean_response_johnston}
+\includegraphics[trim=6cm 2cm 6cm 2cm,width=15cm]{images/mean_response_johnston}
 \caption{Response to $0.1s$ impulses with the mean parameters from \cite{Johnston2008}}
 \label{fig:MeanResponseJ}
 \end{figure}
 
-Its likely that these differences are due to some difference in preprocessing,
-although in \cite{Deneux2006} the signals were found to be peaking around
-$1\%$, unlike \cite{Friston2000} which shows signals peaking at up to
-$3\%$ or $4\%$. In my own tests, it seemed necessary for $\epsilon$ to
-reach well over $1.5$ and $V_0$ to reach more than $.4$ to reach these
-peaks; of course other methods may be equally able. 
-Therefore, to account for these discrepancies, somewhat broader
-distributions are used than the numbers used in \cite{Friston2000}
-(which are widely used, \cite{Hu2009}). The 
-priors used in the particle filter may be found in \autoref{tab:Prior}.
+The differences between the parameter estimates of Johnston et al. and 
+Friston et al. are clearly visible in \autoref{fig:MeanResponseJ} and 
+\autoref{fig:MeanResponseF} \cite{Johnston2008,Friston2002}. 
+Therefore, to account for these discrepancies, I used tests on
+real data to adjust the distributions from those arrived at in 
+Friston et al. \cite{Friston2002}. In tests on real data, the Johnston et al.
+distributions never converged to meaningful BOLD estimates.
+The priors used in the particle filter may be found in \autoref{tab:Prior}.
 
 \begin{table}[t]
 \centering
@@ -360,15 +341,11 @@ $\epsilon$ & Gamma & .7  & .6 \\
 \end{table}
 
 Note that although the mean remains the same for all the 
-parameters other than $\epsilon$, the standard deviation is set
-much higher to account for the disagreement between studies
-(\autoref{tab:Params}). 
-Because all the parameters are taken to be strictly positive, and the
-standard deviations are approaching the mean, I used a gamma distribution.
-This prevents the Gaussian from placing parameters in the nonsensical 
-territory of negative activation, or negative time constants.
+parameters other than $\epsilon$, the standard deviation were
+adjusted based on tests with real data. Also, the state variables
+were all assumed to be at rest at the beginning of the simulation.
 
-Another aspect of the prior is using enough particles to get a 
+It is also import to use enough particles to obtain a 
 sufficiently dense approximation of the prior. For 7 dimensions,
 getting a dense prior is difficult. Insufficiently
 dense particles will result in inconsistent results. Of course the
@@ -378,8 +355,8 @@ near the solution; but as the variance decreases the number of
 particles needed decreases as well. Thus, as a heuristic, initially
 the number of particles was set to 16,000, but after resampling,
 the number of particles was dropped to 1,000. Typically during the 
-first few measurements the variance dropped precipitously because
-most particles were far from a solution.  The particles that are left are in a
+first few measurements the variance drops precipitously because
+most particles are far from a solution.  The particles that are left are in a
 much more compact location, allowing them to be estimated with 
 significantly fewer particles. These numbers aren't set in stone,
 and depending on the complexity of the system or desired accuracy
@@ -394,20 +371,30 @@ because it is simple to sample from and long tailed.
 As discussed in \autoref{sec:Particle Filter Resampling},
 as long as resampling is kept as a last resort, some over-smoothing
 doesn't impair convergence. Therefore, for this work I chose a Gaussian kernel of
-bandwidth equal to the original distribution's covariance. Obviously this will
-apply a rather large amount of smoothing to the distribution; however, on average
-resampling is only applied every 20 to 30 measurements, and because randomization
+bandwidth equal to the original distribution's covariance. This 
+applies a large amount of smoothing to the distribution; however, on average
+resampling was only applied every 20 to 30 measurements, and because randomization
 is being applied to model updates this gives the filter some mobility. 
 
-Re-sampling is a not strictly necessary, but increases the effectiveness
+Resampling is a not strictly necessary, but it increases the effectiveness
 of the particle filter by adjusting the support to emphasize areas
-of higher probability. Re-sampling is slow because it requires re-drawing
+of higher probability. Resampling is slow because it requires redrawing
 all the particles. It also closes off avenues of investigation, and is
 designed to over-smooth to prevent overly thinning the support. For all these
 reasons, resampling was only performed when the $N_{eff}$ dropped below
 50 (for 1000 particles).  As a measure against sharp drops in the $N_{eff}$ 
 caused by a large spike in error, resampling was only performed when 
 two consecutive low ($<50$) $N_{eff}$'s were found. 
+
+\subsection{Particle Deprivation}
+\label{sec:Particle Deprivation}
+To prevent particle deprivation, which may happen even with a good
+estimate of the prior distribution, a method of rescuing the particle
+filter from this state was used. When particle deprivation was detected,
+resampling was performed with a saved version of the covariance matrix (from
+the previous time step). This allowed for the particles to be re-scattered
+without having to go all the way back to the prior distribution. Particle 
+deprivation was defined by $N_{eff}$ dropping to $1$.
 
 \subsection{Choosing $P(y_k | x_k)$}
 \label{sec:Methods Weighting Function}
@@ -424,48 +411,43 @@ exactly matches $P(Y(t) | X(t))$ will easily, and correctly throw out incorrect
 particles.  The cost of choosing an overly broad distribution for this
 function is slow convergence.  On the other hand, an overly thin 
 distribution will lead to particle deprivation (all particles
-being zero-weighted).  I tested several weighting
-functions: in addition to the Gaussian I also tested the Laplace and Cauchy
-distributions, both of which have much wider tales than the Gaussian. 
+being zero-weighted). Three weighting functions were 
+tested. In addition to the Gaussian I also tested the Laplace and Cauchy
+distributions, both of which have wide tales. 
 Wider tailed distributions don't down-weight
-particles as fast; and converge more slowly (and perhaps more accurately). 
+particles as fast; and thus converge more slowly. 
 The Laplace distribution also has the
-benefit of a non-zero slope at the origin; which means that even
-it will distinguish between particles even near the origin.
+benefit of a non-zero slope at the origin; meaning it 
+differentiates between particles even near the origin.
 
-After trial and error, for this work I chose a zero-mean Gaussian with standard deviation 
-of $.005$. While I made some attempts to automatically set the standard 
-deviation, results were often unpredictable. If the weight function and scale aren't
-fixed across voxels, very noisy time series with no actual signal 
-converged to nonsensical results. 
-In the future, it may be possible to set the standard deviation by
+After trial and error, for this work the Gaussian with a standard deviation 
+of $0.005$ was chosen. Although using an adaptive weighting function
+might be better, in tests this often led to unpredictable results. 
+With some work it may be possible to set the standard deviation by
 taking a small sample from resting data and using the sample standard deviation.
-Since this is the first attempt at using particle filters for modeling the 
-BOLD model, in this work I set the standard deviation manually at $.005$,
+In this work, however, I set the standard deviation manually at $0.005$,
 because it gave the best consistency. 
 
 \subsection{Runtime}
 The run-time for a single voxel depends on the several factors. First, the
 overall length of the signal being analyzed. For 1000 measurements it takes
-about 6 minutes. On the other hand, in real circumstances the
-length is only around 150 measurements and takes around 40 seconds (for 1000 
-particles, 1500 integration points and a Quad Core CPU). The size of 
-local linearization steps are also crucial although going above $0.001$ seconds
-per step is not recommended. In most cases millisecond resolution
+approximately 6 minutes. On the other hand, in real circumstances the
+length tends to be around 150 measurements which takes around 40 seconds (for 1000 
+particles, 1400 integration points and a Quad Core CPU). The size of 
+integration steps are also crucial, but using step sizes above 
+$0.001$ seconds is not recommended. In most cases millisecond resolution
 is fine; however, when generating simulated data I found that at times it was
-still not enough every once. This is problematic in the actual particle
+still not enough. This is problematic in the actual particle
 filter since, given the large number of simultaneous integrations taking 
 place, its probable that a few particles will fail and be unfairly thrown away.
-To prevent such events, 1500 integration points per second were used throughout
+To prevent such events, 1400 integration points per second were used throughout
 the tests. 
 
-Another crucial factor for run time is how long before the first re-sampling 
-occurs. Because the prior is represented initially with significantly more
+Because the prior is initially represented with significantly more
 particles, if for some reason the effective
 number of particles stays high, resampling could take a long time to occur.
 For this reason, rather than allowing the particle filter to continue on 
 with this large number of particles, after 20 seconds have passed the
 algorithm forces resampling. The choice of 20 seconds is 
-arbitrary, but at the very least it gives a more optimized version of the
-prior. 
+arbitrary, but at the very least it the particles some time to be reweighted. 
 
