--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -10,7 +10,7 @@ similar to Kalman Filters; however, unlike Kalman Filters,
 distributions are stored as an empircal distribution rather than the
 as the first two moments of a Gaussian. Thus, particle filters are 
 preferred when the model is nonlinear, and non-gaussian. This section
-is largely based on \cite{Arulampalam2002a} and \cite{Thrun2005}.
+is largely based on Arulampalam et al. and Thrun et al. \cite{Arulampalam2002a, Thrun2005}.
 
 \section{Model}
 \label{sec:Particle Filter Model}
@@ -23,7 +23,7 @@ of possible particles and then, as measurements come in, weights
 particles based on the quality of their output estimates. Thus parameter sets 
 that tend to give good estimations of the measurements get weighted higher
 than parameter sets that give poor estimates. Although the reliance on
-a prior distribution is often troublesome, when the system being modeled
+a prior distribution could be problematic, when the system being modeled
 has physical meaning, establishing reasonable ranges for parameters may be 
 quite easy. Optimizing the prior distribution can be more difficult,
 unless the system has been extensively studied.
@@ -70,7 +70,7 @@ for the system to be considered varying with time.
 Next, its assumes that input cannot directly
 influence the output, which in the case of the BOLD signal is a good assumption.
 Finally, because the only difference between the members of $X(t)$ and 
-$\Theta$ is an update function, from now on $X$ will contain 
+$\Theta$ is an update function, from now on $X$ will encapsulate
 $\Theta$. The assumptions now allow for a simplified version of the
 state space equations:
 
@@ -126,7 +126,7 @@ uniform distribution is that the distribution width will inherently scale
 for increased particle counts although some distributions
 flatten out better than others. Either way, $\alpha(X)$ \emph{must} be
 wide enough to incorporate any posterior that arises. If the prior is
-not sufficiently dense, the particle filter can compensate, if it is
+not sufficiently dense, the particle filter may be able to compensate, if it is
 not sufficiently wide the particle filter won't converge. 
 
 \subsection{Weighting}
@@ -244,7 +244,6 @@ density  requires no knowledge of noise distribution.
 \item $q(x_{0:k-1} | y_{0:k}) = q(x_{0:k-1} | y_{0:k-1})$
 \end{enumerate}
 
-\subsection{Basic Algorithm}
 From the definition of $w_i$, the algorithm to calculate
 an approximation of $P(X(t_k) | Y_{0:k})$ or $P(X(t_k + \delta t) | Y_{0:k})$
 is simple. This basic form of the particle filter is given in 
@@ -272,27 +271,34 @@ algorithm \autoref{alg:BasicParticleFilter}.
 
 \section{Sequential Importance Resampling}
 \label{sec:Particle Filter Resampling}
+
+\begin{figure}
+\includegraphics[width=16cm]{images/particle_filter}
+\caption{Particle Filter progression, note that the initial support is flat; the particles
+are equally spaced between -10 and 10}
+\end{figure}
 As a consequence 
 of the wide prior distribution (required for a proper discretization of a continuous
-distribution), in short order there will be a significant proportion of particles 
-with insignificant weights. 
+distribution), a significant proportion of particles will quickly
+develop insignificant weights. 
 While this does help
 describe the tails of the distribution, it means a great deal of computation will be wasted.
 Instead, it would be preferable if most of the computation is spent on the most probable regions.
 Ideally the computation time spent on tails would be proportional to the actual size of the
 tails. In this case particle locations would match the true posterior and all weights would
-be equal.  The case where a large number of the weights have become irrelevantly small
-is called particle degeneracy. In  \cite{Liu1998b}
+be equal.  The case where a large number of the weights have become extremely small
+is called particle degeneracy. In  Lui et al. 
 an ideal calculation of the effective number of particles is found based on the 
-particles' true weight. However, given that only an approximation for the true weight 
+particles' true weight \cite{Liu1998b}. However, given that only an approximation 
+for the true weight 
 exists, they also provide a simple heuristic calculation of $N_{eff}$.
 \begin{equation}
 N_{eff} \approx \frac{\sum_{i=0}^{N_p} w_i}{\sum_{i=0}^{N_p} w_i^2}
 \label{eq:neff}
 \end{equation}
-Any quick run of a particle filter will reveal that unless the prior is particularly accurate,
-$N_{eff}$ drops precipitously.  To alleviate this problem
-a common technique known as resampling may be applied. The idea of resampling is to 
+Unless the prior is particularly accurate,
+$N_{eff}$ drops very quickly.  To alleviate particle degeneracy
+a common technique known as resampling is often applied. The idea of resampling is to 
 draw from the approximate posterior, thus generating a replica of the posterior with 
 a better support. Therefore, a new set of particles may be drawn from the empirical
 distribution as follows:
@@ -337,12 +343,12 @@ x_i = x_i + h\sigma \epsilon
 
 Where $h$ is an optional bandwidth, $\sigma$ is the standard deviation such that 
 $\sigma \sigma^T = cov(x)$
-and $\epsilon$ is drawn from the chosen kernel. \cite{Musso2001a} goes into
-significant 
-depth and proves the optimality of the Epanechnikov Kernel for reducing 
-MSE between the original and resampled distributions. However, \cite{Musso2001a}
-also espouses the usefulness of the Gaussian Kernel, due to the ease
-drawing samples from it, which for this work was more important.
+and $\epsilon$ is drawn from the chosen kernel. The choice of a kernel is
+complex, although it has been proven that the optimal kernel for reducing MSE between
+the original and resampled distributions is 
+is the Epanechnikov Kernel \cite{Musso2001a}. However, Musso et al. 
+also espoused the usefulness of the Gaussian Kernel, due to the ease
+drawing samples from it, which for this work was more important \cite{Musso2001a}.
 
 \begin{algorithm}
 \caption{Regularized Resampling Algorithm}
@@ -358,14 +364,15 @@ drawing samples from it, which for this work was more important.
 \label{alg:RegResampling}
 \end{algorithm}
 
-It has been proposed by \cite{Hurzeler1998} that if the underlying 
-distribution is non-Gaussian, then using the original bandwidth will over-smooth. 
-In reality, over smoothing
-will only become an issue if re-sampling is performed very often. Thus
-if resampling is performed at every step then this could certainly cause problems.
-If the distribution is over-smoothed then the algorithm may not converge as rapidly;
-however, because the bandwidth is still based on particle variance, which decays as 
-particles are ruled out, it is still able to converge. In fact, over-smoothing is preferable
+Hurzeler et al. demonstrated that if the underlying 
+distribution is non-Gaussian, then using the original bandwidth may over-smooth
+\cite{Hurzeler1998}.  In reality, over smoothing
+will only become an issue if resampling is performed often. Thus
+if resampling is performed at every step then this would certainly cause problems.
+If the distribution is over-smoothed then the algorithm may not converge as rapidly,
+or at all. However, because the bandwidth is still based on particle variance, 
+which should decay as particles are ruled out, the particle filter is still able to converge. 
+In fact, over-smoothing is preferable
 to under smoothing, since over-smoothing simply slows convergence while 
 under-smoothing could leave gaps in the distribution.
 Moreover, because of the high dimensionality of the BOLD model,
@@ -396,22 +403,22 @@ and limited measurements, it is helpful to have a broader bandwidth to explore t
  \end{algorithmic}
  \end{algorithm}
 
-Nevertheless, because 
+Because 
 of the potentially wide smoothing factor applied by regularized resampling, performing this
-step at every measurement would allow particles a great deal of mobility. This mobility could
-hinder convergence, which is why regularized resampling should only be done when
-$N_{eff}$ drops off (less than 50). Other than the periodic regularized
+step at every measurement would allow particles a great deal of mobility. Therefore
+in this work regularized resampling was only performed when $N_{eff}$ dropped
+below 50. Other than the periodic regularized
 resampling, the regularized particle filter is identical to the basic sampling
 importance sampling filter (SIS). 
 
 With regularized resampling, it is possible to prevent both
-particle degeneracy as well as particle impoverishment. An additional
-bonus is that as the particle filter converges, the density of particles
+particle degeneracy as well as particle impoverishment. Additionally,
+as the particle filter converges, the density of particles
 in the area of the solution goes up. This has a similar effect to 
 simulated annealing where, as the algorithm approaches the end, the
-random steps get smaller and smaller. However, there is risk in 
-resampling. If for some reason the solution is not covered by the 
-new support the algorithm may not be able to reach the true value. 
+random steps get smaller and smaller. Note however, that resampling
+carries certain risks.  If for some reason the solution is not covered by the 
+new support, the algorithm may not be able to reach the true value. 
 The ultimate effect of this regularized resampling is a convergence similar to simulated annealing
 or a genetic algorithm. Versions of $x$ that are fit (give good measurements) spawn more children 
 nearby which allow for more accurate estimation near points of high likelihood. 
@@ -425,121 +432,114 @@ it is necessary to choose a distribution for this. This distribution
 is important because $\nu_y \sim P(y_k | x(T))$, which is used
 for updating weights. Ideally this weighting function would exactly 
 match the measurement error in the output. 
-Typically it is assumed that this error is additive, centered at zero and 
-has a scale comparable to the signal levels.
 While a Gaussian function is the traditional choice, there are other reasonable
-distributions, given the unpredictable nature of the noise present in FMRI.
+distributions, given the nature of the noise present in FMRI.
 The choice of this function will be discussed further in \autoref{sec:Methods Weighting Function}.
 
-\begin{figure}
-\includegraphics[width=16cm]{images/particle_filter}
-\caption{Particle Filter progression, note that the initial support is flat; the particles
-are equally spaced between -10 and 10}
-\end{figure}
-
-\section{Simple, Nonlinear Example}
-A typical half wave rectifier takes a AC voltage circuit and removes
-one half (say the negative half) of the signal. The resulting waveform
-is still not DC, however it is then possible to use a capacitor to 
-smooth the signal into something similar to DC, as shown in \autoref{fig:HalfWaveIO}.
-There are other, more
-complex circuits that convert the negative portion into positive and
-waste less energy but here I will keep the system simple.
-Thus, let us consider a simple half wave rectifier circuit, shown in 
-\autoref{fig:HalfWaveRectifier}.
-
-The half wave rectifier circuit smoothes the gaps between high voltage
-with a capacitor. Thus, when $u(t)G$ is less than $v_t$, the circuit will 
-discharge the capacitor and maintain a non-zero voltage,
-but when $u(t)G$ is greater than $v_t$, the output voltage will be set
-by $u(t)G$ and the capacitor will charge up. I will assume a simple
-model for all the components, ignoring the complex nonlinear behavior
-that can occur in a diode. 
-
-\begin{figure}
-\centering
-\begin{circuitikz}[scale=2, american]
-\draw
- (0,0)  node[transformer core] (T) {}
- (T.A1) -- (-1,0)
- (T.A2) -- (-1,-1.05)  to[V, v=$u(t)$] (-1, 0)
- (T.B1) -- (.5, 0) to[D, l=$v_t$] (1.5,0) to[C=$C$] (1.5, -1.05)
- (1.5, 0) -- (2.5, 0) to[R=$Rm$, v=$v_y$] (2.5, -1.05) -- (T.B2) 
- (T.base) node {G}
- (T.B1) to[open, *-*, v=$V_1$] (T.B2); 
-\end{circuitikz}
-\caption{An Example Half Wave Rectifier Circuit, where $G$ is the transformer
-gain, $v_t$ is the activation voltage of the diode, $u(t)$ is the input at time $t$, 
-$C$ is the capacitance, $R$ is the load resistance and $v_y$ is the output voltage}
-\label{fig:HalfWaveRectifier}
-\end{figure}
-
-\begin{figure}
-\centering
-\caption{Example Input/Output of the Half Wave Rectifier}
-\label{fig:HalfWaveIO}
-\end{figure}
-
-For this example I will assume that the transformer simply scales
-the input by a constant factor, $G$. As discussed in the \autoref{sec:Particle Filter Model}
-any variable with uncertainty must be part of the state variable. Therefore
-the state variable is defined as: $X(t) = \{G, v_t, C, R_m, v_y\}$. 
-The state equations would then be 
-
-\begin{equation}
-v_y(t)  = f(v_y(t-1, u(t)) =  \begin{cases} 
-        u(t)G & \text{ if }  u(t)G-v_y \ge v_t\\
-        v_y(t-1)\left(1 - \frac{\delta t}{R_mC}\right) & \text{ if }  u(t)G-v_y < v_t
-    \end{cases} 
-\end{equation}
-
-To run the particle filter is easy, since there exists 
-a recursive definition of the dynamic state variable, $v_y$. To start
-with, an initial distribution must be assumed and while at first a 
-Gaussian seems like a good idea, all the static state variables are strictly
-positive and thus not well suited to the Gaussian. Thus, instead the prior 
-will start with a Gamma distribution. The gamma is defined as follows:
-
-\begin{equation}
-X \sim Gamma(k, \theta) \rightarrow f(x) = x^{k-1}\frac{e^{-x/\theta}}{\theta^k\Gamma(k)}
-\end{equation}
-
-where $\Gamma$ is the gamma function.
-The margin for error is decided by the weighting function, which
-will be defined as $W(V_y, v_{yi})$, where $V_y$ is the actual measurement, $v_y$ is the 
-estimate based on all the particles, and 
-$v_{yi}$ is the estimate by a particular ($i^{th}$) particle. The choice of this function is difficult,
-and although the Gaussian is typically used, in practice I found the exponential helpful
-in preventing particle deprivation. The algorithm is then,
-
-\begin{algorithmic}
-\STATE Initialize $N_p$ Particles:
-\FOR{$i$ in $N_p$}
-    \STATE $G \sim Gamma(\frac{\mu^2_G}{\sigma^2_G}, \frac{\sigma^2_G}{\mu_G})$
-    \STATE $v_t \sim Gamma(\frac{\mu^2_{v_t}}{\sigma^2_{v_t}}, \frac{\sigma^2_{v_t}}{\mu_{v_t}})$
-    \STATE $C \sim Gamma(\frac{\mu^2_C}{\sigma^2_C}, \frac{\sigma^2_C}{\mu_C})$
-    \STATE $R_m \sim Gamma(\frac{\mu^2_R}{\sigma^2_R}, \frac{\sigma^2_R}{\mu_R})$
-    \STATE $v_y = 0$, (Assume the system has been off for a long time)
-    \STATE let $X_i(0) = \{G, v_t, C, R_m, v_y\}$
-    \STATE let $w_i(0) = 1$ or to make a flat prior, $w_i(0) = \frac{1}{Pr(X_i(0))}$ 
-\ENDFOR
-\STATE Run the Filter:
-\FOR{$t$ in Set of Measurement Times}
-    \FOR{$i$ in $N_p$}
-        \STATE $v_{yi}(t) = f(v_{yi}(t-1), u(t))$
-        \STATE (All other members of $X_i(t)$ remain the same)
-        \STATE $w_i(t) = w_i(t-1)W(V_y(t), v_y(t))$
-    \ENDFOR
-\ENDFOR
-\end{algorithmic}
-
-Initially the particles will have the same output, $0$, however, as $u(t)$
-changes, the response of each particle to that input will result in different
-outputs. Particles that have a $v_{yi}$ near $V_y$ will be weighted higher,
-and others farther away will be weighted lower. As the particle filter
-runs, weights will compound converging to a distribution that asymptotically
-approaches the true joint distribution of the $X(t)$.  As I
-mentioned in \autoref{sec:Particle Filter Resampling}, particles with 
-weights approaching zero do not significantly
-contribute to the empirical distribution, so re-sampling will be necessary.
+%\section{Piecewise Example}
+%A half wave rectifier takes a AC voltage circuit and removes
+%the negative half  of the signal. The resulting waveform
+%is still not DC, however it is then possible to use a capacitor to 
+%smooth the signal into something similar to DC, as shown in \autoref{fig:HalfWaveIO}.
+%There are other, more
+%complex circuits that convert the negative portion into positive and
+%waste less energy but here I will keep the system simple.
+%Thus, consider a simple half wave rectifier circuit, shown in 
+%\autoref{fig:HalfWaveRectifier}.
+%
+%The half wave rectifier circuit smoothes the gaps between high voltage
+%with a capacitor. Thus, when $u(t)G$ is less than $v_t$, the circuit will 
+%discharge the capacitor and maintain a non-zero voltage,
+%but when $u(t)G$ is greater than $v_t$, the output voltage will be set
+%by $u(t)G$ and the capacitor will charge up. I will assume a simple
+%model for all the components, ignoring the complex nonlinear behavior
+%that can occur in the components. Also note that the 
+%
+%\begin{figure}
+%\centering
+%\begin{circuitikz}[scale=2, american]
+%\draw
+% (0,0)  node[transformer core] (T) {}
+% (T.A1) -- (-1,0)
+% (T.A2) -- (-1,-1.05)  to[V, v=$u(t)$] (-1, 0)
+% (T.B1) -- (.5, 0) to[D, l=$v_t$] (1.5,0) to[C=$C$] (1.5, -1.05)
+% (1.5, 0) -- (2.5, 0) to[R=$Rm$, v=$v_y$] (2.5, -1.05) -- (T.B2) 
+% (T.base) node {G}
+% (T.B1) to[open, *-*, v=$V_1$] (T.B2); 
+%\end{circuitikz}
+%\caption{An Example Half Wave Rectifier Circuit, where $G$ is the transformer
+%gain, $v_t$ is the activation voltage of the diode, $u(t)$ is the input at time $t$, 
+%$C$ is the capacitance, $R$ is the load resistance and $v_y$ is the output voltage}
+%\label{fig:HalfWaveRectifier}
+%\end{figure}
+%
+%\begin{figure}
+%\centering
+%\caption{Example Input/Output of the Half Wave Rectifier}
+%\label{fig:HalfWaveIO}
+%\end{figure}
+%
+%Consider the piecewise function in \autoref{eq:example}. 
+%As discussed in the \autoref{sec:Particle Filter Model}
+%any variable with uncertainty must be part of the state variable. Therefore,
+%even though $G$, $C$, $R_m$ and $V_t$ are constants, they are still
+%included in the state variable: $X(t) = \{G, V_t, C, R_m, v_y\}$. 
+%
+%\begin{equation}
+%v_y(t)  = f(v_y(t-1, u(t)) =  \begin{cases} 
+%        u(t)G & \text{ if }  u(t)G-v_y \ge V_t\\
+%        v_y(t-1)\left(1 - \frac{\delta t}{R_mC}\right) & \text{ if }  u(t)G-v_y < V_t
+%    \end{cases} 
+%\end{equation}
+%
+%To run the particle filter is easy, since there exists 
+%a recursive definition of the dynamic state variable, $v_y$.
+%To start with, an initial distribution must be used; which for
+%this case will be:
+%Gaussian seems like a good idea, all the static state variables are strictly
+%positive and thus not well suited to the Gaussian. Thus, instead the prior 
+%will start with a Gamma distribution. The gamma is defined as follows:
+%
+%\begin{equation}
+%X \sim Gamma(k, \theta) \rightarrow f(x) = x^{k-1}\frac{e^{-x/\theta}}{\theta^k\Gamma(k)}
+%\end{equation}
+%
+%where $\Gamma$ is the gamma function.
+%The margin for error is decided by the weighting function, which
+%will be defined as $W(V_y, v_{yi})$, where $V_y$ is the actual measurement, $v_y$ is the 
+%estimate based on all the particles, and 
+%$v_{yi}$ is the estimate by a particular ($i^{th}$) particle. The choice of this function is difficult,
+%and although the Gaussian is typically used, in practice I found the exponential helpful
+%in preventing particle deprivation. The algorithm is then,
+%
+%\begin{algorithmic}
+%\STATE Initialize $N_p$ Particles:
+%\FOR{$i$ in $N_p$}
+%    \STATE $G \sim Gamma(\frac{\mu^2_G}{\sigma^2_G}, \frac{\sigma^2_G}{\mu_G})$
+%    \STATE $v_t \sim Gamma(\frac{\mu^2_{v_t}}{\sigma^2_{v_t}}, \frac{\sigma^2_{v_t}}{\mu_{v_t}})$
+%    \STATE $C \sim Gamma(\frac{\mu^2_C}{\sigma^2_C}, \frac{\sigma^2_C}{\mu_C})$
+%    \STATE $R_m \sim Gamma(\frac{\mu^2_R}{\sigma^2_R}, \frac{\sigma^2_R}{\mu_R})$
+%    \STATE $v_y = 0$, (Assume the system has been off for a long time)
+%    \STATE let $X_i(0) = \{G, v_t, C, R_m, v_y\}$
+%    \STATE let $w_i(0) = 1$ or to make a flat prior, $w_i(0) = \frac{1}{Pr(X_i(0))}$ 
+%\ENDFOR
+%\STATE Run the Filter:
+%\FOR{$t$ in Set of Measurement Times}
+%    \FOR{$i$ in $N_p$}
+%        \STATE $v_{yi}(t) = f(v_{yi}(t-1), u(t))$
+%        \STATE (All other members of $X_i(t)$ remain the same)
+%        \STATE $w_i(t) = w_i(t-1)W(V_y(t), v_y(t))$
+%    \ENDFOR
+%\ENDFOR
+%\end{algorithmic}
+%
+%Initially the particles will have the same output, $0$, however, as $u(t)$
+%changes, the response of each particle to that input will result in different
+%outputs. Particles that have a $v_{yi}$ near $V_y$ will be weighted higher,
+%and others farther away will be weighted lower. As the particle filter
+%runs, weights will compound converging to a distribution that asymptotically
+%approaches the true joint distribution of the $X(t)$.  As I
+%mentioned in \autoref{sec:Particle Filter Resampling}, particles with 
+%weights approaching zero do not significantly
+%contribute to the empirical distribution, so re-sampling will be necessary.
 
