--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -38,8 +38,8 @@ but adding a carrier level meant that the exact same algorithm used
 for simulated data could be used for the real data. 
 
 Once this noisy simulated time series was generated, the particle filter algorithm
-was run on the single time series image. Five sets of tests 
-determine the power of the particle filter in modeling. 
+was run on the single time series image. Five sets of simulation tests 
+were performed on the particle filter. 
 The first test demonstrates the particle filter on a very long FMRI
 run, and discusses the inherent learn-ability of the BOLD model 
 (\autoref{sec:VeryLongSim}). 
@@ -125,7 +125,8 @@ determine the inherent variance in the model parameters, a very long simulation
 with randomly generated impulse stimuli was created. The preprocessed timeseries
 and the final estimate are shown in \autoref{fig:long_converge};
 the final covariance matrix of the parameters is in \autoref{tab:long_cov}.
-Note that even though the BOLD response converged well (\autoref{fig:long_converge}),
+Note that even though the BOLD response converged (\autoref{fig:long_converge},
+\autoref{fig:long_converge_500}),
 the parameters still have significant correlation (\autoref{tab:long_corr}). 
 Based on the histograms in the first 500 seconds, the parameters converged to
 their final values well before the end.
@@ -133,7 +134,7 @@ Although this is only a single test, the correlation (\autoref{tab:long_corr})
 of the parameters 
 indicates significant parameter indeterminability. When the input
 consists entirely of impulses, the best parameters are not one particular
-set, but a spectrum. Note that the correlation is in parameters whose priors
+set, but a joint distribution. Note that the correlation is in parameters whose priors
 are completely independent. It is possible that varying the type of input could
 give improved results, although informal tests did not show significant difference.
 In spite of the noisy input (green line in \autoref{fig:long_converge}), the estimates
@@ -275,9 +276,9 @@ There are a few important results in the final parameter estimates (which
 are the mean of the particle filter's posterior distribution). First, the time constants vary 
 greatly across
 runs, yet the sum of the individual time constants
-($\tau_f$, $\tau_s$ and $\tau_0$) were more consistent. In general the 
+($\tau_f$, $\tau_s$ and $\tau_0$) were more consistent. On average the 
 time constants fell short of the true time constant. This could be a limitation
-based on the prior distribution (which notably has an initial mean below the true values) 
+based on the prior distribution (which notably had an initial mean below the true values) 
 or it could be that other parameters compensated. It is also possible that the output is insensitive
 to small differences in the time constants.  
 The convergence properties of the first run in \autoref{tab:LowNoiseResults} 
@@ -353,7 +354,7 @@ The results of the particle filter
 for each of the eleven runs are shown in \autoref{fig:FitComparisonHighNoise}. 
 The noise and preprocessing again led the estimates
 to higher peak activation levels, and the subtleties of different time constants 
-are being lost in the noise. 
+were lost in the noise. 
 
 \begin{table}[t]
 \centering
@@ -444,7 +445,7 @@ This is often the
 result when the particle filter converges too fast, in this case the result of the 
 weighting function's variance being smaller than the measurement noise ($0.005$ vs. $0.01$). 
 The error clearly suffers due to this effect (\autoref{tab:HighNoiseResults}).
-Note that neither Run 1 or Run 2 estimated the underlying state well (\autoref{fig:ConvergenceRuns1c}
+Note that neither Run 1 nor Run 2 estimated the underlying state well (\autoref{fig:ConvergenceRuns1c}
 and \autoref{fig:ConvergenceRuns2c}), whereas
 in the previous test the particle filter was extremely successful in this area (\autoref{fig:LowNoiseHistc}).
 
@@ -536,8 +537,8 @@ Same run as \autoref{fig:justnoise_fit_0}}
 \label{fig:JustNoiseConvergence}
 \end{figure}
 
-The data shows that the parameters did really not converge
-\autoref{fig:JustNoiseConvergence}.
+The data shows that the parameters did not converge
+(\autoref{fig:JustNoiseConvergence}).
 The peaks never even reached 1\% difference
 (\autoref{fig:PreprocessedNoiseOnly}) so  the signal  stayed 
 well within the range of $0.005$, the standard deviation of the weighting function.
@@ -546,9 +547,9 @@ were actually lower than the residuals in the low noise simulation from \autoref
 and the parameter estimates were extremely consistent across 11 runs. 
 The low residual was caused by the overall
 signal being significantly smaller than any previous simulation.
-From these results it would seem that lack of convergence could be
-a differentiating factor from a signal with an actual signal; however,
-the next section casts doubt on this possibility. 
+This run would benefit greatly from an adaptive weight function, since
+such a much tighter weighting function would have forced the particle
+filter to fail. 
 
 %NO SIGNAL, VERY HIGH NOISE
 \subsection{Pure Noise, High Magnitude}
@@ -563,12 +564,11 @@ variance in the estimated time series (\autoref{fig:fits_noiseonly_high}).
 Interestingly the algorithm suffered from almost constant particle deprivation, 
 meaning that the heuristic
 for rescuing the particle filter from particle deprivation, discussed in
-\autoref{sec:Resampling}, in fact was working against the proper course of action. 
-The proper course of action in this case would be for the particle filter to fail,
-since no particle can really properly estimate a random sequence. When this mechanism
+\autoref{sec:Particle Deprivation} was used when it shouldn't have been.
+ When this mechanism
 was removed, all 11 runs stopped due to particle deprivation (all weights hit zero). 
 The problem with allowing particle deprivation to occur is that it can \emph{rarely}
-occur in good data if the prior distribution does not cover a solution. 
+occur in otherwise good data if resampling is performed at the wrong moment. 
 
 Because of the preprocessing steps, the pure noise signal can look markedly like a real
 signal (\autoref{fig:justbignoise_fit_0}). The preprocessing causes the particle filter
@@ -609,15 +609,14 @@ by all the estimates overlapping.}
 
 \subsection{Single Voxel Review}
 \label{sec:SingleVoxelReview}
-The first step in determining the validity of a model is to provide some order of quality
-to rate the results by. Unfortunately, because of the variability in the signal levels, the
-raw residual cannot perform this task. As demonstrated by \autoref{tab:NoiseOnlyResults},
+Because of the variability in the signal levels, the
+raw residual cannot be used to rate the fit. As demonstrated by \autoref{tab:NoiseOnlyResults},
 a low residual does not necessarily indicate a good fit. 
-Therefore, instead I  normalized the signal based on a value proportional to
-the magnitude of the signal. Considering the tendency of FMRI noise to have large unexplainable
-peaks and troughs, rather than using MAX and MIN values to estimate the scale of the 
-signal, I used a robust estimator of 
-scale; the Median-Absolute-Deviation (MAD) which is defined in equation \autoref{eq:mad}.
+Therefore, a normalized version of the residual was used. To normalize the
+residual, both the estimated and preprocessed BOLD signals were divided by an estimator
+of scale and then the new residual was calculated. 
+Considering the tendency of FMRI to have large unexplainable
+peaks and troughs, the Median-Absolute-Deviation (MAD) was used (\autoref{eq:mad}).
 This is an estimator of the standard
 deviation, and thus a good estimator of the scale of the input signal. 
 The normalized residual values are 
@@ -637,7 +636,7 @@ I subtracted the estimated bias:
 \text{bias} = \frac{N_{bins}}{2Nlog(2)}
 \end{equation}
 where $N$ is the number of samples and $N_{bins}$ is the number of bins. For all
-the mutual information estimates in this work 6 bins are used for the marginal
+the mutual information estimates in this work 6 bins were used for the marginal
 distribution of each signal. Additionally, throughout log base 2 will be used.
 This leads to 36 total bins in the joint, so the bias is: 
 \begin{equation}
@@ -691,27 +690,52 @@ max &  0.98892  &0.5458  & 0.18339   &1.18996 & 0.06326  &  1.43196 & 0.03163  &
 Comparing the results of \autoref{sec:SimHighNoise} and \autoref{sec:PureNoiseHighMag} 
 in \autoref{tab:SingleVoxelActivationComparison}, 
 distinguishing between these cases with ether normalized residual or mutual information
-is not clear cut. While the average mutual information is in fact more than 10 times
+is not clear cut. While the average mutual information is more than 10 times
 the average mutual information in the two non-signal cases, the maximum
 mutual information of the low noise/no signal case exceeds the minimum M.I. of the high noise/signal
-case. The Low Noise/ signal determination is easier to make; given
+case. The Low Noise/signal determination is easier to make; given
 the minimum mutual information is above $.8$ and the maximum normalized residual is below $.6$.
 However, it is worth noting that the worst case scenario  for mutual information (maximum) in the
-low noise/no signal case does not concur with the worse case (minimum) normalized residual. 
-There is no reason why this has to be the case, but it is beneficial. In
+low noise/no signal case does not coincide with the worse case (minimum) normalized residual. 
+There is no reason why this has to be the case, but it could be beneficial. In
 other words, if it were necessary to make a statement that
 a particular voxel were active or inactive; the accuracy would improve if both techniques
-were used with loose restrictions.
+were used with loose restrictions. In all, both M.I. and the normalized residual 
+provide a good measure of performance.
 
 There were two primary purposes of these tests. First, given the nature of monte-carlo
 techniques it is important to ensure consistency of results. Although the parameter
-sets were inconsistent, the quality of the fit was actually quite consistent
-over eleven runs. The second purpose was of course to determine how the particle 
-filter responded to different signal to noise ratios. From \autoref{sec:SimLowNoise},
-the particle filter performed extremely well in filtering out nonsensical measurements.
+sets were inconsistent, the quality of the fit for the BOLD output was often 
+accurate even when noise was drastically increased. The second purpose was to validate
+Mutual Information and the normalized residual as measurements of output quality. 
+Although not perfect, both methods do provide a decent metric.
 
 \section{Multi-voxel Simulation}
 \label{sec:Multi-voxel Simulation}
+
+\begin{figure}
+\centering
+\subfigure[Region labels for simulated slice.]{
+\includegraphics[height=9.5cm]{images/simregions.png} \label{fig:simslice_mask} }
+\subfigure[Grey matter map for simulate region.]{\includegraphics[height=9.5cm]{images/sim_gm}}
+\subfigure[Residual Map. Scale is Normalized error. Lower (yellow) is better.]
+{\label{fig:simslice_hm_res} \includegraphics[height=9cm]{images/sim_hm}}
+\subfigure[Mutual Information Map. Scale is bits. Higher (yellow) is better.]
+{\label{fig:sim_hm_mi} \includegraphics[height=9cm]{images/sim_hm_mi}}
+\caption{Comparison of activation with greymatter, parameter regions.}
+\label{fig:simslice_hm}
+\end{figure}
+
+\begin{figure}
+\centering
+\subfigure{
+\includegraphics[width=10cm]{images/snr_hm.png}}
+\subfigure{\includegraphics[width=1cm]{images/scale5.png}}
+\caption{SNR Map of POSSUM simulated data. Region 1 mean SNR was $0.8$, Region 2 mean SNR was $0.97$, and 
+Region 3 mean SNR was $0.39$.}
+\label{fig:SimSNRhm}
+\end{figure}
+
 To test the usefulness of the particle filter on a larger scale, I used a modified version 
 of the FSL tool 
 POSSUM to generate an entire FMRI image from a parameter map. The parameter map was generated
@@ -725,35 +749,12 @@ in the program the true signal-to-noise ratio was much lower, as seen in the
 in \autoref{fig:SimSNRhm}. The mean SNR for each region was calculated only for the
 voxels with a Signal-To-Noise ratio above $0.1$.
 
-\begin{figure}
-\centering
-\subfigure{
-\includegraphics[width=10cm]{images/snr_hm.png}}
-\subfigure{\includegraphics[width=1cm]{images/scale5.png}}
-\caption{SNR Map of POSSUM simulated data. Region 1 mean SNR was $0.8$, Region 2 mean SNR was $0.97$, and 
-Region 3 mean SNR was $0.39$.}
-\label{fig:SimSNRhm}
-\end{figure}
-
 For each time-series in the simulated FMRI image, the final parameters were saved
 into a parameter map. This parameter map could then be compared to the map used to generate the 
-simulated data; additionally a new simulation using the calculated parameters could also be 
+simulated data. Additionally a new simulation using the calculated parameters could also be 
 generated to test the difference in BOLD levels between the real parameters and the
-estimated ones. Since the parameters were far from orthogonal 
-\cite{Deneux2006}, this provided a quantitative difference between the two parameter sets.
-
-\begin{figure}[H]
-\centering
-\subfigure[Region labels for simulated slice.]{
-\includegraphics[height=9.5cm]{images/simregions.png} \label{fig:simslice_mask} }
-\subfigure[Grey matter map for simulate region.]{\includegraphics[height=9.5cm]{images/sim_gm}}
-\subfigure[Residual Map. Scale is Normalized error. Lower (yellow) is better.]
-{\includegraphics[height=9cm]{images/sim_hm}}
-\subfigure[Mutual Information Map. Scale is bits. Higher (yellow) is better.]
-{\includegraphics[height=9cm]{images/sim_hm_mi}}
-\caption{Comparison of activation with greymatter, parameter regions.}
-\label{fig:simslice_hm}
-\end{figure}
+estimated ones. Since the parameters were far from orthogonal, 
+ this provided a quantitative difference between the two parameter sets \cite{Deneux2006}.
 
 The regions are numbered according to \autoref{fig:simslice_mask}; the parameters
 for each region may be found in \autoref{tab:simsliceparams}. 
@@ -774,15 +775,15 @@ Region & $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\eps
 \label{tab:simsliceparams} 
 \end{table}
 
-Note that region 4 has a very low $\epsilon$. For this reason, the only areas
-with significant estimates of the BOLD time series were 1,2 and 3. With
-such a low $\epsilon$, region 4 was below the noise threshold. Notice that the
+Note that region 4 had a very low $\epsilon$, putting it below the noise
+threshold. For this reason, the only areas
+with significant estimates of the BOLD time series were 1,2 and 3. 
+Notice that the
 regions 1, 2 an 3 stick out in both the residual and the mutual information
 map, indicating that the particle filter was successful in matching those regions. 
 Mutual information was an extremely successful metric, with the exception of 
-a few false positives. Thus, another heatmap (\autoref{fig:sim_hm2}) is 
-helpful to show what threshold would remove those false positives. 
-
+a few false positives. \autoref{fig:sim_hm2} shows what the heat map looks
+like when the threshold is raised from $0.1$ to $0.15$.
 \begin{figure}
 \centering
 \subfigure{
@@ -796,7 +797,7 @@ helpful to show what threshold would remove those false positives.
 \centering
 \includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist1}
 \caption{Histogram of estimated parameters in section 1 in voxels with mutual information greater
-than $0.14$}
+than $0.15$}
 \label{fig:slicesim_hist1}
 \end{figure}
 
@@ -804,7 +805,7 @@ than $0.14$}
 \centering
 \includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist2}
 \caption{Histogram of estimated parameters in section 2 in voxels with mutual information greater
-than $0.14$}
+than $0.15$}
 \label{fig:slicesim_hist2}
 \end{figure}
 
@@ -812,28 +813,30 @@ than $0.14$}
 \centering
 \includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist3}
 \caption{Histogram of estimated parameters in section 3 in voxels with mutual information greater
-than $0.14$}
+than $0.15$}
 \label{fig:slicesim_hist3}
 \end{figure}
 
-There were 1479 voxels analyzed, and there 11 were false positives, according
-the mutual information threshold of $0.1$. Raising the threshold to $0.15$ reduced
-the number of false positives to $0$. Quantifying false negatives is harder, because
-of the presence of white matter.
+If the thresholds are left at the values of \autoref{fig:simslice_hm}, then
+the normalized residual gave $2/1479$  false positives and mutual information gave
+$11/1479$. However, normalized residual also clearly missed some active voxels, although
+false negatives are harder to quantify because of the presence of white matter. 
+Raising the threshold to $0.15$ eliminated the false positives in the 
+Mutual Information map, although some active voxels were also removed. 
 
 The histograms again demonstrate that a single point estimate of the parameters 
 is elusive for this set of parameters. However the data clearly show the power
-of the particle filter at identifying regions of activation; which is usually
-performed with statistical parametric maps. The thresholds applied to this
-slice, both for mutual information and residuals is arbitrary, and needs further
-research. Tighter thresholds removes the false positives present
-in the images at the cost of false negatives. As noted in \autoref{sec:SingleVoxelReview}
+of the particle filter at identifying regions of activation.
+ The thresholds applied to this
+slice, both for mutual information and residuals are arbitrary. Applying a
+threshold is helpful for visualization, but is rarely useful for further analysis.
+As noted in \autoref{sec:SingleVoxelReview},
 the false positives present in the Mutual Information
-map are different from those in the residual map. This furthers the argument from
+map are different from those in the residual map. This furthers the argument 
 for combining the two metrics to increase power. Although
-at first glance it would appear that there are false negatives in the 
-\autoref{fig:simslice_hm}; this is
+at first glance it would appear that there are false negatives in 
+\autoref{fig:sim_hm_mi}; this is
 not actually the case. POSSUM simulates different tissues, and white matter
-does not typically  have a BOLD response. This is why there are holes in regions
-2 and 3. These results indicate that the particle filter is effective
+does not typically  have a BOLD response. This explains some of the holes in regions
+2 and 3. These results certainly indicate that the particle filter is effective
 at regressing against a noisy signal. 
